--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "broccoli-persistent-filter": "^1.2.0",
     "chalk": "^1.1.1",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-version-checker": "^1.1.6",
     "ember-template-lint": "^0.5.3",
     "exists-sync": "0.0.3",
     "hash-for-dep": "^1.0.2",
