--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "htmlbars": "^0.14.17",
     "js-string-escape": "^1.0.0",
     "json-stable-stringify": "^1.0.1",
-    "md5-hex": "^1.2.1"
+    "md5-hex": "^1.2.1",
+    "walk-sync": "^0.2.6"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
