--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "broccoli-persistent-filter": "^1.2.0",
     "chalk": "^1.1.1",
+    "debug": "^2.2.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-version-checker": "^1.1.6",
     "ember-template-lint": "^0.5.6",
