Use `ember try:one` instead of `ember try`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ install:
   - bower install
 
 script:
-  - ember try $EMBER_TRY_SCENARIO test
+  - ember try:one $EMBER_TRY_SCENARIO --- ember test
   - npm run test-node
