--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,6 @@ cache:
   directories:
     - node_modules
 
-env:
-  - EMBER_TRY_SCENARIO=default
-  - EMBER_TRY_SCENARIO=ember-release
-  - EMBER_TRY_SCENARIO=ember-beta
-  - EMBER_TRY_SCENARIO=ember-canary
-
 matrix:
   fast_finish: true
   allow_failures:
@@ -31,5 +25,5 @@ install:
   - bower install
 
 script:
-  - ember try:one $EMBER_TRY_SCENARIO --- ember test
+  - ember test
   - npm run test-node
