--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,22 @@ node_js:
 sudo: false
 
 cache:
-  directories:
-    - node_modules
+  yarn: true
 
 matrix:
   fast_finish: true
 
 before_install:
-  - "npm config set spin false"
-  - "npm install -g npm@^3"
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+  - yarn global add bower phantomjs-prebuilt
+  - bower --version
+  - phantomjs --version
 
 install:
-  - npm install -g bower
-  - npm install
+  - yarn install --no-lockfile
   - bower install
 
 script:
-  - ember test
-  - npm run nodetest
+  - yarn test
+  - yarn run nodetest
