--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "broccoli-test-helpers": "0.0.9",
+    "broccoli-test-helper": "^1.1.0",
     "chai": "^3.5.0",
     "co": "^4.6.0",
     "ember-ajax": "2.5.1",
