--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "aot-test-generators": "^0.1.0",
+    "broccoli-concat": "^3.2.2",
     "broccoli-persistent-filter": "^1.2.0",
     "chalk": "^1.1.1",
     "debug": "^2.2.0",
