Removed unused dependencies

--- a/package.json
+++ b/package.json
@@ -30,14 +30,10 @@
     "aot-test-generators": "^0.1.0",
     "broccoli-concat": "^3.2.2",
     "broccoli-persistent-filter": "^1.2.0",
-    "chai-as-promised": "^7.0.0",
     "chalk": "^1.1.1",
     "debug": "^2.6.8",
-    "ember-cli-babel": "^6.4.1",
     "ember-cli-version-checker": "^2.0.0",
     "ember-template-lint": "^0.7.0",
-    "exists-sync": "0.0.4",
-    "hash-for-dep": "^1.0.2",
     "json-stable-stringify": "^1.0.1",
     "md5-hex": "^2.0.0",
     "walk-sync": "^0.3.2"
@@ -48,6 +44,7 @@
     "chai": "^4.0.0",
     "co": "^4.6.0",
     "ember-cli": "2.13.2",
+    "ember-cli-babel": "^6.4.1",
     "ember-cli-blueprint-test-helpers": "^0.17.2",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-htmlbars": "^2.0.1",
@@ -57,12 +54,10 @@
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.1.0",
-    "glob": "^7.1.2",
     "loader.js": "^4.5.0",
     "mocha": "^3.4.2",
     "mocha-eslint": "^3.0.1",
-    "mocha-only-detector": "^0.1.0",
-    "rimraf": "^2.5.2"
+    "mocha-only-detector": "^0.1.0"
   },
   "engines": {
     "node": ">= 4"
