--- a/.npmignore
+++ b/.npmignore
@@ -7,11 +7,17 @@
 .bowerrc
 .editorconfig
 .ember-cli
-.gitignore
 .eslintrc.js
+.gitignore
 .watchmanconfig
 .travis.yml
 bower.json
 ember-cli-build.js
 testem.js
-node-tests/
+yarn.lock
+/node-tests
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
