--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 ---
 language: node_js
 node_js:
-  - "4"
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
   - "6"
-  - "7"
 
 sudo: false
 dist: trusty
@@ -14,20 +14,31 @@ addons:
 cache:
   yarn: true
 
-matrix:
-  fast_finish: true
+env:
+  global:
+    # See https://git.io/vdao3 for details.
+    - JOBS=1
+  matrix:
+    # we recommend new addons test the current and previous LTS
+    # as well as latest stable release (bonus points to beta/canary)
+    - EMBER_TRY_SCENARIO=ember-lts-2.12
+    - EMBER_TRY_SCENARIO=ember-lts-2.16
+    - EMBER_TRY_SCENARIO=ember-lts-2.18
+    - EMBER_TRY_SCENARIO=ember-release
+    - EMBER_TRY_SCENARIO=ember-beta
+    - EMBER_TRY_SCENARIO=ember-canary
+    - EMBER_TRY_SCENARIO=ember-default
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
-  - yarn global add bower phantomjs-prebuilt
-  - bower --version
-  - phantomjs --version
 
 install:
-  - yarn install --no-lockfile --ignore-engines
-  - bower install
+  - yarn install --no-lockfile
 
 script:
-  - yarn test
-  - yarn run nodetest
+  - yarn lint:js
+  - yarn nodetest
+  # Usually, it's ok to finish the test scenario without reverting
+  #  to the addon's original dependency state, skipping "cleanup".
+  - yarn ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
