--- a/package.json
+++ b/package.json
@@ -5,26 +5,28 @@
   "keywords": [
     "ember-addon"
   ],
-  "homepage": "https://github.com/ember-template-lint/ember-cli-template-lint",
-  "bugs": {
-    "url": "https://github.com/ember-template-lint/ember-cli-template-lint/issues"
-  },
-  "license": "MIT",
-  "author": "Robert Jackson <me@rwjblue.com>",
-  "main": "index.js",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/ember-template-lint/ember-cli-template-lint.git"
   },
+  "license": "MIT",
+  "author": "Robert Jackson <me@rwjblue.com>",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "homepage": "https://github.com/ember-template-lint/ember-cli-template-lint",
+  "bugs": {
+    "url": "https://github.com/ember-template-lint/ember-cli-template-lint/issues"
+  },
+  "main": "index.js",
   "scripts": {
     "build": "ember build",
     "nodetest": "mocha node-tests --recursive --timeout 5000",
-    "start": "ember server",
-    "test": "ember try:testall"
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "dependencies": {
     "aot-test-generators": "^0.1.0",
@@ -40,28 +42,35 @@
     "walk-sync": "^0.3.2"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
+    "broccoli-asset-rev": "^2.7.0",
     "broccoli-test-helper": "^1.3.0",
     "chai": "^4.0.0",
     "co": "^4.6.0",
-    "ember-cli": "2.14.2",
-    "ember-cli-babel": "^6.4.1",
+    "ember-cli": "~3.3.0",
+    "ember-cli-babel": "^6.6.0",
     "ember-cli-blueprint-test-helpers": "^0.18.3",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.0",
-    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-qunit": "^4.3.2",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.0",
+    "ember-source": "~3.3.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
     "loader.js": "^4.5.0",
     "mocha": "^5.2.0",
     "mocha-eslint": "^4.1.0",
-    "mocha-only-detector": "^1.0.0"
+    "mocha-only-detector": "^1.0.0",
+    "qunit-dom": "^0.6.2"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
