Test against broccoli@2.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "walk-sync": "^0.3.2"
   },
   "devDependencies": {
+    "broccoli": "^2.0.0-beta.4",
     "broccoli-asset-rev": "^2.7.0",
     "broccoli-test-helper": "^1.3.0",
     "chai": "^4.0.0",
