--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-template-lint",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0",
   "description": "Lint your handlebars templates.",
   "keywords": [
     "ember-addon"
