--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "main": "index.js",
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
@@ -42,28 +43,32 @@
     "walk-sync": "^2.0.2"
   },
   "devDependencies": {
+    "@ember/optional-features": "^1.1.0",
+    "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-test-helper": "^2.0.0",
     "chai": "^4.1.2",
     "co": "^4.6.0",
     "console-ui": "^3.1.1",
     "ember-cli": "~3.15.1",
-    "ember-cli-babel": "^7.1.0",
+    "ember-cli-babel": "^7.13.0",
     "ember-cli-blueprint-test-helpers": "^0.19.1",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-htmlbars": "^4.2.1",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^4.2.0",
     "ember-cli-htmlbars-inline-precompile": "^3.0.1",
-    "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^5.0.1",
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^7.0.0",
     "ember-source": "~3.15.0",
     "ember-source-channel-url": "^2.0.1",
-    "ember-try": "^1.0.0",
-    "eslint-plugin-ember": "^7.7.2",
-    "eslint-plugin-node": "^11.0.0",
+    "ember-try": "^1.4.0",
+    "eslint-plugin-ember": "^7.7.1",
+    "eslint-plugin-node": "^10.0.0",
     "loader.js": "^4.7.0",
     "mocha": "^7.0.0",
     "mocha-eslint": "^5.0.0",
