--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chalk": "^3.0.0",
     "debug": "^4.0.1",
     "ember-cli-version-checker": "^5.0.1",
-    "ember-template-lint": "^2.0.0-beta.5",
+    "ember-template-lint": "^2.0.1",
     "json-stable-stringify": "^1.0.1",
     "md5-hex": "^3.0.1",
     "strip-ansi": "^6.0.0",
